<resources>
    <string name="app_name">Rboard Theme Manager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to\nRboard Theme Manager</string>
    <string name="selectRuntime">Select Runtime</string>
    <string name="magiskModule">MAGISK MODULE</string>
    <string name="magiskSummary">Will require installation of magisk zip module.</string>
    <string name="systemSummary">Add or modify prop in /system/build.prop\nfast to install and uninstall. Might Break OTA.</string>
    <string name="systemMod">SYSTEM MODIFICATION</string>
    <string name="permissionTitle">Permissions</string>
    <string name="rboardStorage">RBOARD STORAGE</string>
    <string name="rboardStorageSummary">Required for backup of stock keyboard sounds.</string>
    <string name="gboardStorage">GBOARD STORAGE</string>
    <string name="gboardStorageSummary">Gboard needs storage permission to read themes in device storage.</string>
    <string name="grid_change">Change Grid</string>
    <string name="magiskInstalled">You need Root rights to use this app!</string>
    <string name="default_notification_channel_id">push_channel</string>
    <string name="ui_mode_service_channel">ui_mode_channel</string>
    <string name="channel_name">Push Notifications</string>
    <string name="channel_description">For updates and informations.</string>
    <string name="title_themes">Themes</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_sounds">Sounds</string>
    <string name="list_grid">Listlayout</string>
    <string name="grid_small">Small Gridlayout</string>
    <string name="grid_big">Big Gridlayout</string>
    <string name="search_hint">Search Themes</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="enable_border">Key borders</string>
    <string name="applied">Theme Applied</string>
    <string name="error">There was an Error!</string>
    <string name="errors">There where some Errors!</string>
    <string name="no_root">This app does not work without root!</string>
    <string name="delete_theme">Delete Theme</string>
    <string name="theme_deleted">Theme Deleted</string>
    <string name="themes_deleted">Themes Deleted</string>
    <string name="long_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="delete_theme_confirm">Do you want to delete this theme?</string>
    <string name="delete_themes_confirm">Do you want to delete the selected themes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="magiskVersionNumber">Magisk VersionCode: %d</string>
    <string name="magiskVersionCode">Magisk VersionString: %s</string>
    <string name="magiskFullString">Magisk FullString: %s</string>
    <string name="sound_placeholder">Soon™</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="about">About</string>
    <string name="device">Device</string>
    <string name="themes">Themes</string>
    <string name="themesMode">Themes installed using %s</string>
    <string name="themesCount">%s themes installed</string>
    <string name="themesPath">Themes Path %s</string>
    <string name="loading">Loading</string>
    <string name="magisk">Magisk</string>
    <string name="root">Root</string>
    <string name="magiskIsInstalled">Magisk version %s</string>
    <string name="androidVersion">Android version %s</string>
    <string name="gboardVersion">Gboard version %s</string>
    <string name="rboardVersion">Rboard Theme Manager version %s</string>
    <string name="about_title">About Application</string>
    <string name="data">Info</string>
    <string name="logs">Logs</string>
    <string name="delete">Delete</string>
    <string name="cleared">Logs cleared</string>
    <string name="share">Share</string>
    <string name="share_error">Error while uploading!</string>
    <string name="title_name_popup">Choose a name for the Theme</string>
    <string name="name">Name</string>
    <string name="theme_added">Theme added</string>
    <string name="settings">Settings</string>
    <string name="flags">Flags</string>
    <string name="theme_pref">Theme</string>
    <string name="ui">Ui</string>
    <string name="key">Activation Key</string>
    <string name="mainAuth">Please enter your Activation Key and Email.</string>
    <string name="alreadyRegistered">Already Registered</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="loginAuth">Please enter your registered Email.</string>
    <string name="label_nav_auth_main">fragment_auth_main</string>
    <string name="label_nav_auth_login">fragment_auth_login</string>
    <string name="label_nav_auth_success">fragment_auth_success</string>
    <string name="label_nav_auth_failed">fragment_auth_failed</string>
    <string name="press_back_again">Press back again to exit the app.</string>
    <string name="success">success</string>
    <string name="next">Next</string>
    <string name="failed">failed</string>
    <string name="retry">Retry</string>
    <string name="background">Background</string>
    <string name="inputError">Can not be empty!</string>
    <string name="removed">Theme deleted.</string>
    <string name="undo">UNDO</string>
    <string name="share_themes">Share themes</string>
    <string name="noFile">No file provided!</string>
    <string name="close">Close</string>
    <string name="restart">Restart</string>
    <string name="later">Later</string>
    <string name="need_reboot_title">Reboot device?</string>
    <string name="need_reboot">To make this app work properly, you have to reboot your phone.</string>
    <string name="themePath_pref">Theme Path</string>
    <string name="download">Download</string>
    <string name="no_flags">No flags found!</string>
    <string name="channel_name_ui_mode">Ui Mode Service</string>
    <string name="channel_description_ui_mode">Ui Mode Service Notification</string>
    <string name="ui_mode_service_title">Ui Mode Service</string>
    <string name="ui_mode_service_text">Service Notification</string>
    <string name="apply_theme_both">Apply theme to both</string>
    <string name="apply_theme_dark">Apply theme to Dark Mode</string>
    <string name="apply_theme_light">Apply theme to Light Mode</string>
    <string name="please_open_app">Please open the App!</string>
    <string name="service_key">Change Theme Service</string>
    <string name="restart_app">Please restart the App</string>
    <string name="share_module">Share Magisk-Module</string>
    <string name="install_pack">Install Pack</string>
    <string name="installGboard">Install Gboard first please!</string>
    <string name="tags">Tags</string>
    <string name="default_value">Default</string>
    <string name="twitter">Twitter</string>
    <string name="github">GitHub</string>
    <string name="paypal">PayPal</string>

    <string name="flags_emoji_fix">Emoji compat fix</string>
    <string name="flags_joystick_delete">Joystick delete</string>
    <string name="flags_deprecate_search">Google icon</string>
    <string name="flags_nav_bar_theming">Navbar color</string>
    <string name="flags_enable_sharing">Share Icon</string>
    <string name="flags_email_provider">Email provider</string>
    <string name="flags_emoji_picker_columns">Emoji columns</string>
    <string name="flags_emoji_picker_columns_summary">Number of emoji in a row</string>
    <string name="flags_popup_v2">Popup v2</string>
    <string name="flags_enable_key_border">Enable key border</string>
    <string name="flags_enable_secondary_symbols">Enable secondary symbols</string>
    <string name="flags_show_suggestions">Show suggestions</string>
    <string name="flags_keyboard_height_ratio">Keyboard height ratio</string>

    <string name="typ_summary">Developer of this Application</string>
    <string name="typ_title">DerTyp7214</string>
    <string name="typ_twitter">https://twitter.com/DerTyp7214</string>
    <string name="typ_github">https://github.com/DerTyp7214</string>
    <string name="typ_paypal">https://paypal.me/JosuaLengwenath</string>

    <string name="rk_title">RKBDI</string>
    <string name="rk_summary">Creator of many themes and the Magisk Module</string>
    <string name="rk_twitter">https://twitter.com/RKBDI</string>
    <string name="rk_github">https://github.com/RadekBledowski</string>
    <string name="rk_paypal">https://paypal.me/rkbdi2</string>

    <string name="nylon_title">nylonW</string>
    <string name="nylon_summary">Co-Developer</string>
    <string name="nylon_twitter">https://twitter.com/marcinslusarek</string>
    <string name="nylon_github">https://github.com/nylonW</string>
    <string name="nylon_paypal">https://paypal.me/nylonw</string>

    <string name="pandan_title">DanGLES3</string>
    <string name="pandan_summary">TODO</string>
    <string name="pandan_twitter">https://twitter.com/DanielGLES3</string>
    <string name="pandan_github">https://github.com/DanGLES3</string>
    <string name="pandan_paypal">https://www.paypal.com/donate?hosted_button_id=GHAYUFKDHUCSU</string>
    <string name="pandan_image">https://avatars.githubusercontent.com/u/32078304</string>

    <string name="akos_title">AkosPaha</string>
    <string name="akos_summary">Creator of many themes</string>
    <string name="akos_twitter">https://twitter.com/pahaakos</string>
    <string name="akos_github">https://github.com/AkosPaha</string>
    <string name="akos_paypal">http://paypal.me/akospaha01</string>
    <string name="akos_image">https://avatars.githubusercontent.com/u/57151668</string>
    <string name="author">Author</string>
    <string name="overrideTheme">Override Themes</string>
    <string name="creator">Rboard Theme Creator</string>
</resources>
