<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="300"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_theme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share_magisk_module"
        android:orderInCategory="400"
        android:title="@string/share_module"
        android:icon="@drawable/ic_share"
        android:visible="false"
        app:showAsAction="never" />

</menu>