<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.graphics.Color" />
        <variable
            name="systemEnabled"
            type="de.dertyp7214.rboardthememanager.data.SystemEnabled" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.WelcomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0sp"
            app:cardElevation="2sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="61dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="44dp"
                    android:src="@drawable/ic_select_runtime"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/selectRuntime"
                    android:textColor="@color/primaryText"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/clickMagisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/magiskText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing=".17"
                        android:text="@string/magiskModule"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing=".1"
                        android:text="@string/magiskSummary"
                        android:textColor="@color/primaryText"
                        android:textSize="16sp" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/radioMagisk"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/clickSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@{systemEnabled.enabled ? android.R.attr.selectableItemBackground : Color.TRANSPARENT}"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/systemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing=".17"
                        android:text="@string/systemMod"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/systemSummary"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="17dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:letterSpacing=".1"
                        android:text="@string/systemSummary"
                        android:textColor="@color/primaryText"
                        android:textSize="16sp"
                        tools:ignore="NestedWeights" />

                </LinearLayout>

                <RadioButton
                    android:id="@+id/radioSystem"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="@{systemEnabled.enabled}"
                    android:checked="true"
                    android:clickable="false" />

            </LinearLayout>

            <TextView
                android:id="@+id/magisk_installed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/magiskInstalled"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>