<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_background"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/primaryText"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/clickTwitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:id="@+id/twitterImage"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/twitter"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/twitterText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/twitter"
                        android:textColor="@color/primaryText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clickGithub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:id="@+id/githubImage"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/github"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/githubText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/github"
                        android:textColor="@color/primaryText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/clickPaypal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:id="@+id/paypalImage"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/paypal"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/paypalText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/paypal"
                        android:textColor="@color/primaryText" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.dertyp7214.rboardthememanager.component.MaskedImageView
                    android:id="@+id/userProfileImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mask="@drawable/squircle"
                    app:srcCompat="@drawable/android_head" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>